--- a/front/package.json
+++ b/front/package.json
@@ -14,13 +14,14 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
+    "date-fns": "^3.0.0",
     "lucide-react": "^0.474.0",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "tailwind-merge": "^3.0.1",
