--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.0.0",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.474.0",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
