--- a/front/package.json
+++ b/front/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.66.7",
     "axios": "^1.7.9",
@@ -22,11 +25,13 @@
     "date-fns": "^3.0.0",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.474.0",
+    "next-themes": "^0.4.4",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
