--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.0.0",
     "dotenv": "^16.4.7",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.474.0",
     "next-themes": "^0.4.4",
     "react": "^18.0.0",
